--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@manuscripts/article-editor",
-  "version": "1.13.26-LEAN-2089.1",
+  "version": "1.13.26",
   "license": "CPAL-1.0",
   "description": "React components for editing and viewing manuscripts",
   "repository": "github:Atypon-OpenSource/manuscripts-article-editor",
@@ -35,10 +35,10 @@
     "@fontsource/lato": "^4.5.10",
     "@fontsource/pt-sans": "^4.5.11",
     "@fontsource/pt-serif": "^4.5.11",
-    "@manuscripts/body-editor": "1.9.22-LEAN-2089.1",
+    "@manuscripts/body-editor": "1.9.22",
     "@manuscripts/json-schema": "^2.2.7",
     "@manuscripts/library": "^1.3.6",
-    "@manuscripts/style-guide": "1.12.7-LEAN-2089.0",
+    "@manuscripts/style-guide": "1.12.7",
     "@manuscripts/track-changes-plugin": "1.7.11",
     "@manuscripts/transform": "2.3.3",
     "@microsoft/fetch-event-source": "^2.0.1",
