--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@manuscripts/library": "^1.3.6",
     "@manuscripts/style-guide": "1.12.8",
     "@manuscripts/track-changes-plugin": "1.7.11",
-    "@manuscripts/transform": "2.3.4",
+    "@manuscripts/transform": "2.3.3-LEAN-3577-Stage-1",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@popperjs/core": "^2.11.8",
     "@reach/tabs": "^0.18.0",
