--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@manuscripts/json-schema": "2.2.8",
     "@manuscripts/library": "1.3.7",
     "@manuscripts/style-guide": "1.12.15-LEAN-3608.0",
-    "@manuscripts/track-changes-plugin": "1.7.12",
+    "@manuscripts/track-changes-plugin": "1.7.13-LEAN-3608.0",
     "@manuscripts/transform": "2.3.8-LEAN-3608.0",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@popperjs/core": "^2.11.8",
