--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@fontsource/pt-sans": "^4.5.11",
     "@fontsource/pt-serif": "^4.5.11",
     "@manuscripts/body-editor": "1.13.2-LEAN-3307.0",
-    "@manuscripts/json-schema": "2.2.8",
-    "@manuscripts/library": "1.3.7",
+    "@manuscripts/json-schema": "2.2.9-LEAN-3307.0",
+    "@manuscripts/library": "1.3.8-LEAN-3307.0",
     "@manuscripts/style-guide": "1.13.1-LEAN-3307.0",
     "@manuscripts/track-changes-plugin": "1.7.13",
     "@manuscripts/transform": "2.3.9-LEAN-3307.1",
