--- a/package.json
+++ b/package.json
@@ -44,16 +44,17 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@popperjs/core": "^2.11.8",
     "@reach/tabs": "^0.18.0",
+    "@types/use-sync-external-store": "^0.0.6",
     "autotrack": "^2.4.1",
     "axios": "^1.6.7",
     "http-status-codes": "^2.2.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
-    "react": "^17.0.2",
+    "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^17.0.2",
-    "react-is": "^17.0.2",
+    "react-dom": "^18.3.1",
+    "react-is": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-popper": "^2.0.0",
     "react-router": "^5.3.4",
@@ -61,6 +62,7 @@
     "react-select": "^5.7.3",
     "styled-components": "^5.2.0",
     "type-fest": "^4.6.0",
+    "use-sync-external-store": "^1.2.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -74,9 +76,9 @@
     "@types/jest": "^29.2.4",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.202",
-    "@types/react": "^16.9.55",
-    "@types/react-dom": "^16.9.9",
-    "@types/react-modal": "^3.10.6",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-modal": "^3.16.1",
     "@types/react-router": "^5.1.13",
     "@types/react-router-dom": "^5.1.13",
     "@types/styled-components": "^5.1.4",
@@ -107,6 +109,6 @@
     "typescript": "^4.0.5"
   },
   "resolutions": {
-    "@types/react": "^17.0.2"
+    "@types/react": "^18.3.1"
   }
 }
