--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "@fontsource/lato": "^4.5.10",
     "@fontsource/pt-sans": "^4.5.11",
     "@fontsource/pt-serif": "^4.5.11",
-    "@manuscripts/body-editor": "1.13.20-LEAN-3645-2",
+    "@manuscripts/body-editor": "1.13.21",
     "@manuscripts/json-schema": "2.2.10",
     "@manuscripts/library": "1.3.10",
-    "@manuscripts/style-guide": "1.13.12-LEAN-3645",
+    "@manuscripts/style-guide": "1.13.13",
     "@manuscripts/track-changes-plugin": "1.7.14",
     "@manuscripts/transform": "2.3.19",
     "@microsoft/fetch-event-source": "^2.0.1",
