--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@manuscripts/article-editor",
-  "version": "1.17.18",
+  "version": "3.0.0",
   "license": "CPAL-1.0",
   "description": "React components for editing and viewing manuscripts",
   "repository": "github:Atypon-OpenSource/manuscripts-article-editor",
@@ -35,30 +35,32 @@
     "@fontsource/lato": "^4.5.10",
     "@fontsource/pt-sans": "^4.5.11",
     "@fontsource/pt-serif": "^4.5.11",
-    "@manuscripts/body-editor": "1.13.29",
+    "@manuscripts/body-editor": "2.0.0",
     "@manuscripts/json-schema": "2.2.10",
     "@manuscripts/library": "1.3.10",
-    "@manuscripts/style-guide": "1.13.16",
+    "@manuscripts/style-guide": "2.0.0",
     "@manuscripts/track-changes-plugin": "1.7.14",
     "@manuscripts/transform": "2.3.21",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@popperjs/core": "^2.11.8",
     "@reach/tabs": "^0.18.0",
+    "@types/use-sync-external-store": "^0.0.6",
     "autotrack": "^2.4.1",
     "axios": "^1.6.7",
     "http-status-codes": "^2.2.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
-    "react": "^17.0.2",
+    "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^17.0.2",
-    "react-is": "^17.0.2",
+    "react-dom": "^18.3.1",
+    "react-is": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-popper": "^2.0.0",
     "react-select": "^5.7.3",
     "styled-components": "^5.2.0",
     "type-fest": "^4.6.0",
+    "use-sync-external-store": "^1.2.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -103,6 +105,6 @@
     "typescript": "^4.0.5"
   },
   "resolutions": {
-    "@types/react": "^17.0.2"
+    "@types/react": "^18.3.1"
   }
 }
