--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "@fontsource/lato": "^4.5.10",
     "@fontsource/pt-sans": "^4.5.11",
     "@fontsource/pt-serif": "^4.5.11",
-    "@manuscripts/body-editor": "2.0.1",
+    "@manuscripts/body-editor": "2.0.2-JSR",
     "@manuscripts/json-schema": "2.2.10",
     "@manuscripts/library": "1.3.10",
     "@manuscripts/style-guide": "2.0.0",
-    "@manuscripts/track-changes-plugin": "1.7.14",
-    "@manuscripts/transform": "2.3.21",
+    "@manuscripts/track-changes-plugin": "1.7.15",
+    "@manuscripts/transform": "2.3.21-JSR",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@popperjs/core": "^2.11.8",
     "@reach/tabs": "^0.18.0",
