--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@manuscripts/style-guide": "1.13.16",
     "@manuscripts/track-changes-plugin": "1.7.14",
     "@manuscripts/transform": "2.3.21",
+    "prosemirror-utils": "^0.9.6",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@popperjs/core": "^2.11.8",
     "@reach/tabs": "^0.18.0",
