--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "styled-components": "^5.2.0",
     "type-fest": "^4.6.0",
     "use-sync-external-store": "^1.2.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yarn-run-all": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
