--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "@fontsource/lato": "^4.5.10",
     "@fontsource/pt-sans": "^4.5.11",
     "@fontsource/pt-serif": "^4.5.11",
-    "@manuscripts/body-editor": "2.0.11",
+    "@manuscripts/body-editor": "2.0.11-JSR",
     "@manuscripts/json-schema": "2.2.10",
     "@manuscripts/library": "1.3.10",
     "@manuscripts/style-guide": "2.0.2",
     "@manuscripts/track-changes-plugin": "1.7.17",
-    "@manuscripts/transform": "2.3.21",
+    "@manuscripts/transform": "2.3.21-JSR",
     "prosemirror-utils": "^0.9.6",
     "@popperjs/core": "^2.11.8",
     "@reach/tabs": "^0.18.0",
