--- a/package.json
+++ b/package.json
@@ -41,15 +41,17 @@
     "@manuscripts/style-guide": "2.0.6",
     "@manuscripts/track-changes-plugin": "1.7.17",
     "@manuscripts/transform": "2.3.24",
-    "prosemirror-utils": "^0.9.6",
     "@popperjs/core": "^2.11.8",
     "@reach/tabs": "^0.18.0",
     "@types/use-sync-external-store": "^0.0.6",
     "autotrack": "^2.4.1",
     "axios": "^1.6.7",
+    "html-react-parser": "^5.1.12",
     "http-status-codes": "^2.2.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "prosemirror-state": "^1.4.2",
+    "prosemirror-utils": "^0.9.6",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
