LEAN-3902 Update @reach/tabs dependency

--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "version": "ALLOW_MISSING_VARIABLES=1 yarn build"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fontsource/lato": "^4.5.10",
     "@fontsource/pt-sans": "^4.5.11",
     "@fontsource/pt-serif": "^4.5.11",
@@ -41,15 +44,15 @@
     "@manuscripts/style-guide": "2.0.6",
     "@manuscripts/track-changes-plugin": "1.7.17",
     "@manuscripts/transform": "2.3.24",
-    "prosemirror-utils": "^0.9.6",
     "@popperjs/core": "^2.11.8",
-    "@reach/tabs": "^0.18.0",
     "@types/use-sync-external-store": "^0.0.6",
     "autotrack": "^2.4.1",
     "axios": "^1.6.7",
+    "framer-motion": "^11.3.30",
     "http-status-codes": "^2.2.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "prosemirror-utils": "^0.9.6",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
