--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "@fontsource/lato": "^4.5.10",
     "@fontsource/pt-sans": "^4.5.11",
     "@fontsource/pt-serif": "^4.5.11",
-    "@manuscripts/body-editor": "2.0.44-LEAN-3883.3",
+    "@manuscripts/body-editor": "2.0.46",
     "@manuscripts/json-schema": "2.2.11",
     "@manuscripts/library": "1.3.11",
-    "@manuscripts/style-guide": "2.0.20-LEAN-3883.0",
+    "@manuscripts/style-guide": "2.0.19",
     "@manuscripts/track-changes-plugin": "1.7.17",
     "@manuscripts/transform": "2.3.31",
     "prosemirror-utils": "^0.9.6",
