--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@manuscripts/article-editor",
-  "version": "3.2.18",
+  "version": "3.2.18-LEAN-3967.0",
   "license": "CPAL-1.0",
   "description": "React components for editing and viewing manuscripts",
   "repository": "github:Atypon-OpenSource/manuscripts-article-editor",
@@ -35,11 +35,11 @@
     "@fontsource/lato": "^4.5.10",
     "@fontsource/pt-sans": "^4.5.11",
     "@fontsource/pt-serif": "^4.5.11",
-    "@manuscripts/body-editor": "2.2.19",
+    "@manuscripts/body-editor": "2.2.20-LEAN-3967.0",
     "@manuscripts/json-schema": "2.2.11",
     "@manuscripts/library": "1.3.11",
     "@manuscripts/style-guide": "2.0.21",
-    "@manuscripts/track-changes-plugin": "1.7.23",
+    "@manuscripts/track-changes-plugin": "1.7.24-LEAN-3967.2",
     "@manuscripts/transform": "3.0.4",
     "@popperjs/core": "^2.11.8",
     "@reach/tabs": "^0.18.0",
