--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@fontsource/lato": "^4.5.10",
     "@fontsource/pt-sans": "^4.5.11",
     "@fontsource/pt-serif": "^4.5.11",
+    "@headlessui/react": "^2.1.10",
     "@manuscripts/body-editor": "2.2.19",
     "@manuscripts/json-schema": "2.2.11",
     "@manuscripts/library": "1.3.11",
