--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@fontsource/lato": "^4.5.10",
     "@fontsource/pt-sans": "^4.5.11",
     "@fontsource/pt-serif": "^4.5.11",
-    "@manuscripts/body-editor": "2.6.19",
+    "@manuscripts/body-editor": "2.6.20-LEAN-4150.0",
     "@manuscripts/json-schema": "2.2.11",
     "@manuscripts/library": "1.3.11",
     "@manuscripts/style-guide": "2.0.24-LEAN-4150.0",
