--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@manuscripts/body-editor": "2.7.36",
     "@manuscripts/json-schema": "2.2.11",
     "@manuscripts/library": "1.3.11",
-    "@manuscripts/style-guide": "2.0.34",
+    "@manuscripts/style-guide": "2.0.35-LEAN-4312",
     "@manuscripts/track-changes-plugin": "1.9.4",
     "@manuscripts/transform": "3.0.37",
     "@popperjs/core": "^2.11.8",
