--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@manuscripts/library": "1.3.11",
     "@manuscripts/style-guide": "2.0.36-LEAN-4311.2",
     "@manuscripts/track-changes-plugin": "1.9.4",
-    "@manuscripts/transform": "3.0.45-LEAN-4311.0",
+    "@manuscripts/transform": "3.0.44",
     "@popperjs/core": "^2.11.8",
     "@types/use-sync-external-store": "^0.0.6",
     "autotrack": "^2.4.1",
