--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "@fontsource/lato": "^4.5.10",
     "@fontsource/pt-sans": "^4.5.11",
     "@fontsource/pt-serif": "^4.5.11",
-    "@manuscripts/body-editor": "2.7.44-LEAN-4312.2",
+    "@manuscripts/body-editor": "2.7.56-LEAN-4312",
     "@manuscripts/json-schema": "2.2.11",
     "@manuscripts/library": "1.3.11",
     "@manuscripts/style-guide": "2.0.35-LEAN-4312.0",
-    "@manuscripts/track-changes-plugin": "1.9.4",
+    "@manuscripts/track-changes-plugin": "1.9.5-LEAN-4312.0",
     "@manuscripts/transform": "3.0.40",
     "@popperjs/core": "^2.11.8",
     "@types/use-sync-external-store": "^0.0.6",
