--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@manuscripts/article-editor",
-  "version": "3.8.40-LEAN-4433.1",
+  "version": "3.8.40-LEAN-4433.2",
   "license": "CPAL-1.0",
   "description": "React components for editing and viewing manuscripts",
   "repository": "github:Atypon-OpenSource/manuscripts-article-editor",
@@ -35,12 +35,12 @@
     "@fontsource/lato": "^4.5.10",
     "@fontsource/pt-sans": "^4.5.11",
     "@fontsource/pt-serif": "^4.5.11",
-    "@manuscripts/body-editor": "2.8.37-LEAN-4433.2",
+    "@manuscripts/body-editor": "2.8.37-LEAN-4433.3",
     "@manuscripts/json-schema": "2.2.11",
     "@manuscripts/library": "1.3.13",
     "@manuscripts/style-guide": "2.1.6",
     "@manuscripts/track-changes-plugin": "1.10.4",
-    "@manuscripts/transform": "3.0.54",
+    "@manuscripts/transform": "3.0.55-LEAN-4433.0",
     "@popperjs/core": "^2.11.8",
     "@types/use-sync-external-store": "^0.0.6",
     "autotrack": "^2.4.1",
