--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es2020",
     "baseUrl": ".",
-    "lib": ["es2017", "dom", "dom.iterable", "esnext.array"],
+    "lib": ["es2021", "dom", "dom.iterable", "esnext.array"],
     "sourceMap": true,
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
@@ -20,5 +20,5 @@
     "skipLibCheck": true,
     "strictNullChecks": true
   },
-  "include": ["src", "stories", "types", "webpack.*.ts"],
+  "include": ["src", "stories", "types", "webpack.*.ts"]
 }
