--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "@fontsource/lato": "^4.5.10",
     "@fontsource/pt-sans": "^4.5.11",
     "@fontsource/pt-serif": "^4.5.11",
-    "@manuscripts/body-editor": "2.8.62",
-    "@manuscripts/json-schema": "2.2.11",
-    "@manuscripts/library": "1.3.14",
+    "@manuscripts/body-editor": "2.8.63-LEAN-4531.1",
+    "@manuscripts/json-schema": "2.2.12-LEAN-4531",
+    "@manuscripts/library": "1.3.15-LEAN-4531.2",
     "@manuscripts/style-guide": "2.1.10",
     "@manuscripts/track-changes-plugin": "1.10.4",
-    "@manuscripts/transform": "3.0.62",
+    "@manuscripts/transform": "3.0.63-LEAN-4531.2",
     "@popperjs/core": "^2.11.8",
     "@types/use-sync-external-store": "^0.0.6",
     "autotrack": "^2.4.1",
