--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@manuscripts/body-editor": "2.8.63-LEAN-4531.1",
     "@manuscripts/json-schema": "2.2.12-LEAN-4531",
     "@manuscripts/library": "1.3.15-LEAN-4531.2",
-    "@manuscripts/style-guide": "2.1.10",
+    "@manuscripts/style-guide": "2.1.10-LEAN-4531",
     "@manuscripts/track-changes-plugin": "1.10.4",
     "@manuscripts/transform": "3.0.63-LEAN-4531.2",
     "@popperjs/core": "^2.11.8",
