--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/use-sync-external-store": "^0.0.6",
     "autotrack": "^2.4.1",
     "axios": "^1.6.7",
+    "diff-match-patch": "^1.0.5",
     "html-react-parser": "^5.1.16",
     "http-status-codes": "^2.2.0",
     "jwt-decode": "^3.1.2",
