--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@manuscripts/article-editor",
-  "version": "3.8.84",
+  "version": "3.8.84-LEAN-2023.0",
   "license": "CPAL-1.0",
   "description": "React components for editing and viewing manuscripts",
   "repository": "github:Atypon-OpenSource/manuscripts-article-editor",
@@ -30,19 +30,19 @@
     "@fontsource/pt-sans": "5.2.5",
     "@fontsource/pt-serif": "5.2.5",
     "@headlessui/react": "2.2.3",
-    "@manuscripts/body-editor": "2.8.57",
-    "@manuscripts/json-schema": "2.2.11",
-    "@manuscripts/library": "1.3.14",
-    "@manuscripts/style-guide": "2.1.10",
-    "@manuscripts/track-changes-plugin": "1.10.4",
-    "@manuscripts/transform": "3.0.59",
+    "@manuscripts/body-editor": "2.8.80-LEAN-2023.1",
+    "@manuscripts/json-schema": "2.2.12",
+    "@manuscripts/library": "1.3.14-LEAN-2023.1",
+    "@manuscripts/style-guide": "2.1.12-LEAN-2023.2",
+    "@manuscripts/track-changes-plugin": "1.10.7-LEAN-2023.2",
+    "@manuscripts/transform": "3.0.67-LEAN-2023.2",
     "@popperjs/core": "2.11.8",
     "date-fns": "4.1.0",
     "dompurify": "3.2.5",
     "prosemirror-state": "1.4.3",
-    "prosemirror-model": "1.25.1",
+    "prosemirror-model": "1.25.0",
     "prosemirror-transform": "1.10.4",
-    "prosemirror-view": "1.39.2",
+    "prosemirror-view": "1.40.0",
     "prosemirror-utils": "1.2.2",
     "axios": "1.9.0",
     "html-react-parser": "5.2.5",
