--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "18.3.1",
     "react-is": "18.3.1",
     "react-popper": "2.3.0",
+    "react-router-dom": "6.30.0",
     "react-select": "5.10.1",
     "styled-components": "5.3.11",
     "use-sync-external-store": "1.5.0",
