--- a/package.json
+++ b/package.json
@@ -97,6 +97,9 @@
     "prettier": "2.8.8",
     "react-dnd-test-backend": "16.0.1",
     "typescript": "4.9.5"
+  },
+  "engines": {
+    "node": ">=20.16.0"
   }
 }
 
