--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@manuscripts/eslint-config": "^0.5.1",
+    "@types/diff-match-patch": "^1.0.36",
     "@types/dompurify": "^2.0.4",
     "@types/google.analytics": "^0.0.45",
     "@types/jest": "^29.2.4",
