--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "styled-components": "^5.2.0",
     "use-sync-external-store": "^1.2.2",
     "uuid": "^9.0.0",
-    "yarn-run-all": "^3.1.1"
+    "yarn-run-all": "^3.1.1",
+    "diff-match-patch": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
