--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "@babel/preset-env": "7.23.8",
     "@babel/preset-react": "7.27.1",
     "@babel/preset-typescript": "7.23.3",
+    "@eslint/eslintrc": "3.3.1",
+    "@eslint/js": "9.29.0",
     "@manuscripts/eslint-config": "0.5.1",
     "@types/jest": "29.5.14",
     "@types/lodash": "4.17.16",
@@ -73,27 +75,24 @@
     "@types/styled-components": "5.1.34",
     "@types/use-sync-external-store": "1.5.0",
     "@types/uuid": "9.0.8",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
-    "babel-jest": "29.7.0",
-    "eslint": "8.57.1",
-    "eslint-config-prettier": "8.10.0",
+    "@typescript-eslint/eslint-plugin": "8.34.1",
+    "@typescript-eslint/parser": "8.34.1",
+    "eslint": "9.29.0",
     "eslint-plugin-header": "3.1.1",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jest": "27.9.0",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-jest": "29.0.1",
     "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-mdx": "2.3.4",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-promise": "6.6.0",
+    "eslint-plugin-mdx": "3.5.0",
+    "eslint-plugin-prettier": "5.5.0",
+    "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-react": "7.37.5",
-    "eslint-plugin-react-hooks": "4.6.2",
-    "eslint-plugin-simple-import-sort": "8.0.0",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-simple-import-sort": "12.1.1",
     "husky": "8.0.3",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "npm-run-all": "4.1.5",
-    "prettier": "2.8.8",
+    "prettier": "3.6.0",
     "react-dnd-test-backend": "16.0.1",
     "typescript": "4.9.5"
   },
