--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "react-select": "5.10.1",
     "styled-components": "5.3.11",
     "use-sync-external-store": "1.5.0",
-    "uuid": "9.0.1"
+    "uuid": "9.0.1",
+    "diff-match-patch": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "7.23.7",
@@ -73,6 +74,7 @@
     "@types/styled-components": "5.1.34",
     "@types/use-sync-external-store": "1.5.0",
     "@types/uuid": "9.0.8",
+    "@types/diff-match-patch": "^1.0.36",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "babel-jest": "29.7.0",
