--- a/package.json
+++ b/package.json
@@ -36,17 +36,17 @@
     "@manuscripts/track-changes-plugin": "2.0.1",
     "@manuscripts/transform": "4.2.0",
     "@popperjs/core": "2.11.8",
+    "axios": "1.9.0",
     "date-fns": "4.1.0",
     "dompurify": "3.2.5",
-    "prosemirror-state": "1.4.3",
-    "prosemirror-model": "1.25.0",
-    "prosemirror-transform": "1.10.4",
-    "prosemirror-view": "1.40.0",
-    "prosemirror-utils": "1.2.2",
-    "axios": "1.9.0",
     "html-react-parser": "5.2.5",
     "jwt-decode": "4.0.0",
     "lodash": "4.17.21",
+    "prosemirror-model": "1.25.0",
+    "prosemirror-state": "1.4.3",
+    "prosemirror-transform": "1.10.4",
+    "prosemirror-utils": "1.2.2",
+    "prosemirror-view": "1.40.0",
     "react": "18.3.1",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
@@ -78,6 +78,7 @@
     "@typescript-eslint/eslint-plugin": "8.34.1",
     "@typescript-eslint/parser": "8.34.1",
     "eslint": "9.29.0",
+    "eslint-plugin-diff": "^2.0.3",
     "eslint-plugin-header": "3.1.1",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "29.0.1",
