--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@manuscripts/article-editor",
-  "version": "4.2.8",
+  "version": "4.2.9",
   "license": "CPAL-1.0",
   "description": "React components for editing and viewing manuscripts",
   "repository": "github:Atypon-OpenSource/manuscripts-article-editor",
@@ -58,7 +58,8 @@
     "react-select": "5.10.1",
     "styled-components": "5.3.11",
     "use-sync-external-store": "1.5.0",
-    "uuid": "9.0.1"
+    "uuid": "9.0.1",
+    "diff-match-patch": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "7.23.7",
@@ -74,6 +75,7 @@
     "@types/styled-components": "5.1.34",
     "@types/use-sync-external-store": "1.5.0",
     "@types/uuid": "9.0.8",
+    "@types/diff-match-patch": "^1.0.36",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "babel-jest": "29.7.0",
