--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
     "uuid": "9.0.1",
     "diff-match-patch": "^1.0.5"
   },
+  "overrides": {
+    "prosemirror-model": "1.25.0"
+  },
   "devDependencies": {
     "@babel/core": "7.23.7",
     "@babel/preset-env": "7.23.8",
