--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@headlessui/react": "2.2.3",
     "@manuscripts/body-editor": "3.2.29-LEAN-4610.0",
     "@manuscripts/json-schema": "2.2.12",
-    "@manuscripts/style-guide": "3.1.6",
+    "@manuscripts/style-guide": "3.1.7-LEAN-4610.0",
     "@manuscripts/track-changes-plugin": "2.0.5",
     "@manuscripts/transform": "4.2.9",
     "@popperjs/core": "2.11.8",
