--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "skipLibCheck": true,
     "strictNullChecks": true
   },
-  "include": ["src", "stories", "types", "webpack.*.ts"]
+  "include": ["src", "types"]
 }
