--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@manuscripts/article-editor",
-  "version": "4.5.21-LEAN-4805.0",
+  "version": "4.5.21-LEAN-4805.1",
   "license": "CPAL-1.0",
   "description": "React components for editing and viewing manuscripts",
   "repository": "github:Atypon-OpenSource/manuscripts-article-editor",
@@ -32,10 +32,10 @@
     "@fontsource/pt-sans": "5.2.5",
     "@fontsource/pt-serif": "5.2.5",
     "@headlessui/react": "2.2.3",
-    "@manuscripts/body-editor": "3.5.19-LEAN-4805.0",
+    "@manuscripts/body-editor": "3.5.19-LEAN-4805.1",
     "@manuscripts/json-schema": "2.2.12",
     "@manuscripts/style-guide": "3.3.2",
-    "@manuscripts/track-changes-plugin": "2.0.13",
+    "@manuscripts/track-changes-plugin": "2.0.14-LEAN-4805.2",
     "@manuscripts/transform": "4.2.20-LEAN-4805.0",
     "@popperjs/core": "2.11.8",
     "axios": "1.11.0",
